versons. 

Added wx.StandardPaths.GetTmpDir.

Bug fixes in the wx.ListCtrl on Mac from Kevin Olivier, allowing it to
send events properly again.  There is also a new native implementation
of wx.ListCtrl available, which will be used for wx.LC_REPORT style
list controls if you set the "mac.listctrl.always_use_generic"
SystemOption to zero.  In a future release this will be the default.





2.7.1.2
-------
* 21-Oct-2006

Fixed a bug in the MaskedEdit controls caused by conflicting IsEmpty
methods. 

Patch #1579280: Some mimetype optimizations on unix-like systems.

wxMac: Several wx.webkit.WebKitCtrl enhancements/fixes, including:

    - new methods for increasing/decreasing text size, getting
      selection, getting/setting scroll position, printing, enabling
      editing, and running JavaScripts on the page.

    - added new event (wx.webkit.WebKitBeforeLoadEvent) for catching, and
      possibly vetoing, load events before they occur.

    - wx.webkit.WebKitCtrl now fires mouse events for certain events
      that it was eating before. This improves wxSplitterWindow
      resizing behavior.

    - refactoring of the sizing logic to move the Cocoa view.  Tested
      with splitter windows, panels, notebooks and all position
      correctly with this.

Some improvements to the drawing code in CustomTreeCtrl.

Fixed refcount leak in wx.Window.GetChildren.





2.7.1.1
-------
* 18-Oct-2006

The following deprecated items have been removed:

    * wx.Bitmap SetQuality and GetQuality methods

    * The wx.GetNumberFromUser function

    * wx.EVT_LIST_GET_INFO and wx.EVT_LIST_SET_INFO

    * wx.BookCtrlSizer and wx.NotebookSizer

    * The PostScript-specific methods of wx.PrintData

    * wx.PrintDialogData SetSetupDialog and GetSetupDialog methods

    * wx.FontMapper SetConfig method

    * wx.html.HtmlSearchStatus.GetContentsItem method

    * wx.html.HtmlHelpData.GetContents, GetContentsCnt, GetIndex, and
      GetIndexCnt methods

